# AI-text-humanizer

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MARKET_READINESS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
aip/: __init__.py  analyzers.py  api.py  calibration.py  cli.py  config.py  engine.py  evaluation.py  gui.py  humanizer.py  provenance.py  risk.py  scorecard.py  security.py  types.py
examples/: benchmark_template.csv
scripts/: pre_release_check.sh
tests/: test_api_hardening.py  test_evaluation_pipeline.py  test_gui.py  test_humanizer.py
