[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-text-humanizer"
version = "1.0.0"
description = "AI Text Humanizer Platform – rewrites AI-generated text to read as human-written"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "AI Text Humanizer Contributors" }
]
keywords = ["nlp", "text", "humanizer", "ai-detection", "bypass", "burstiness", "perplexity"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "nltk>=3.8",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
test = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pytest>=7",
]

[project.scripts]
aip = "aip.cli:main"
aip-gui = "aip.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
